# chrome_extension

./: .gitignore  DEVELOPMENT.md  ICONS_GUIDE.md  PUBLISHING.md  QUICK_START.md  README.md  background.js  index.html  manifest.json  popup.html  popup.js  vite.config.ts
api-server/: .dockerignore  .env.example  Dockerfile  app.py  auth.py  benchmark_novelty_detector.py  cluster_utils.py  engine.py  extract_content.py  llm_summarizer.py  logreg_utils.py  models.py  pyproject.toml  requirements.txt  storage.py  whats_new.py
api-server/data/: data.csv  data_set_2.csv
api-server/model_para/: post_train_config.json
api-server/tests/: conftest.py  helpers.py  test_app_helpers.py  test_cluster_utils.py  test_engine.py  test_pipeline.py  test_storage.py
auth-backend/: .gitignore  README.md  package-lock.json  package.json  server.js
backend/: SFT_MiniLM.py  build_data_from_WCEP.py  environment.yml  model_comparison.py  post-train_MiniLM.py  post-train_MiniLM_sft.py  scrape_helper.py  scrape_images.py  stat.py
backend/out_posttrain_sft_minilm/: post_train_config.json
backend/out_posttrain_sft_minilm_L12/: post_train_config.json
backend/out_wcep_dataset/: sft_pairs.train.jsonl
experiments/: build_data_from_WCEP.py  post_train_mini_lm_benchmark.py  utils.py
experiments/out_embedding_benchmark/: embedding_comparison.csv
experiments/out_sft_minilm/: sft_report.json
extension/: background.js  content.js  manifest.json  popup.html  popup.js
public/: background.js  manifest.json
scripts/: build-extension.sh
src/: App.tsx
src/components/: Auth.tsx  (+4 more)
(+13 files in other folders)
