[tool.poetry]
name = "api-server"
version = "0.1.0"
description = ""
authors = ["Alisa Chekalina <alisa.chekalina25@imperial.ac.uk>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
numpy = "<2"
pandas = "2.2.2"
scikit-learn = "1.4.2"
sentence-transformers = "2.2.2"
transformers = "4.30.2"
fastapi = "^0.129.0"
uvicorn = {extras = ["standard"], version = "^0.40.0"}
pydantic = "^2.12.5"
torch = "^2.10.0"
orjson = "^3.11.7"
tqdm = "^4.67.3"
requests = "^2.32.5"
readability-lxml = "^0.8.4.1"
trafilatura = "^2.0.0"
passlib = {extras = ["argon2"], version = "^1.7.4"}
python-jose = {extras = ["cryptography"], version = "^3.5.0"}
python-multipart = "^0.0.22"
email-validator = "^2.3.0"
huggingface-hub = "0.14.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

